# serializer version: 1
# name: test_bridge_device
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'configuration_url': None,
    'connections': set({
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'tedee',
        '0000-0000',
      ),
    }),
    'is_new': False,
    'manufacturer': 'Tedee',
    'model': 'Bridge',
    'name': 'Bridge-AB1C',
    'name_by_user': None,
    'serial_number': '0000-0000',
    'suggested_area': None,
    'sw_version': None,
    'via_device_id': None,
  })
# ---
# name: test_cleanup_disconnected_locks
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'tedee',
          '0000-0000',
        ),
      }),
      'is_new': False,
      'manufacturer': 'Tedee',
      'model': 'Bridge',
      'name': 'Bridge-AB1C',
      'name_by_user': None,
      'serial_number': '0000-0000',
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'tedee',
          '12345',
        ),
      }),
      'is_new': False,
      'manufacturer': 'Tedee',
      'model': 'Tedee PRO',
      'name': 'Lock-1A2B',
      'name_by_user': None,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': <ANY>,
    }),
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'tedee',
          '98765',
        ),
      }),
      'is_new': False,
      'manufacturer': 'Tedee',
      'model': 'Tedee GO',
      'name': 'Lock-2C3D',
      'name_by_user': None,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': <ANY>,
    }),
  ])
# ---
# name: test_cleanup_disconnected_locks.1
  list([
  ])
# ---
# name: test_cleanup_disconnected_locks.2
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.lock_1a2b_charging',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.BATTERY_CHARGING: 'battery_charging'>,
      'original_icon': None,
      'original_name': 'Charging',
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '12345-charging',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.lock_1a2b_semi_locked',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Semi locked',
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'semi_locked',
      'unique_id': '12345-semi_locked',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.lock_1a2b_pullspring_enabled',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Pullspring enabled',
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'pullspring_enabled',
      'unique_id': '12345-pullspring_enabled',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'lock',
      'entity_category': None,
      'entity_id': 'lock.lock_1a2b',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': <LockEntityFeature: 1>,
      'translation_key': None,
      'unique_id': '12345-lock',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.lock_1a2b_battery',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
      'original_icon': None,
      'original_name': 'Battery',
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '12345-battery_sensor',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.TOTAL: 'total'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.lock_1a2b_pullspring_duration',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
      'original_icon': 'mdi:timer-lock-open',
      'original_name': 'Pullspring duration',
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'pullspring_duration',
      'unique_id': '12345-pullspring_duration',
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
  ])
# ---
# name: test_cleanup_disconnected_locks.3
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.lock_2c3d_charging',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.BATTERY_CHARGING: 'battery_charging'>,
      'original_icon': None,
      'original_name': 'Charging',
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '98765-charging',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.lock_2c3d_semi_locked',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Semi locked',
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'semi_locked',
      'unique_id': '98765-semi_locked',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.lock_2c3d_pullspring_enabled',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Pullspring enabled',
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'pullspring_enabled',
      'unique_id': '98765-pullspring_enabled',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'lock',
      'entity_category': None,
      'entity_id': 'lock.lock_2c3d',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '98765-lock',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.lock_2c3d_battery',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
      'original_icon': None,
      'original_name': 'Battery',
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '98765-battery_sensor',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.TOTAL: 'total'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.lock_2c3d_pullspring_duration',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
      'original_icon': 'mdi:timer-lock-open',
      'original_name': 'Pullspring duration',
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'pullspring_duration',
      'unique_id': '98765-pullspring_duration',
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
  ])
# ---
# name: test_cleanup_disconnected_locks.4
  list([
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'tedee',
          '0000-0000',
        ),
      }),
      'is_new': False,
      'manufacturer': 'Tedee',
      'model': 'Bridge',
      'name': 'Bridge-AB1C',
      'name_by_user': None,
      'serial_number': '0000-0000',
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': None,
    }),
    DeviceRegistryEntrySnapshot({
      'area_id': None,
      'config_entries': <ANY>,
      'configuration_url': None,
      'connections': set({
      }),
      'disabled_by': None,
      'entry_type': None,
      'hw_version': None,
      'id': <ANY>,
      'identifiers': set({
        tuple(
          'tedee',
          '98765',
        ),
      }),
      'is_new': False,
      'manufacturer': 'Tedee',
      'model': 'Tedee GO',
      'name': 'Lock-2C3D',
      'name_by_user': None,
      'serial_number': None,
      'suggested_area': None,
      'sw_version': None,
      'via_device_id': <ANY>,
    }),
  ])
# ---
# name: test_cleanup_disconnected_locks.5
  list([
  ])
# ---
# name: test_cleanup_disconnected_locks.6
  list([
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.lock_2c3d_charging',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <BinarySensorDeviceClass.BATTERY_CHARGING: 'battery_charging'>,
      'original_icon': None,
      'original_name': 'Charging',
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '98765-charging',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.lock_2c3d_semi_locked',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Semi locked',
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'semi_locked',
      'unique_id': '98765-semi_locked',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'binary_sensor',
      'entity_category': <EntityCategory.DIAGNOSTIC: 'diagnostic'>,
      'entity_id': 'binary_sensor.lock_2c3d_pullspring_enabled',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': 'Pullspring enabled',
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'pullspring_enabled',
      'unique_id': '98765-pullspring_enabled',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': None,
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'lock',
      'entity_category': None,
      'entity_id': 'lock.lock_2c3d',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': None,
      'original_icon': None,
      'original_name': None,
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '98765-lock',
      'unit_of_measurement': None,
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.MEASUREMENT: 'measurement'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.lock_2c3d_battery',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.BATTERY: 'battery'>,
      'original_icon': None,
      'original_name': 'Battery',
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': None,
      'unique_id': '98765-battery_sensor',
      'unit_of_measurement': '%',
    }),
    EntityRegistryEntrySnapshot({
      'aliases': set({
      }),
      'area_id': None,
      'capabilities': dict({
        'state_class': <SensorStateClass.TOTAL: 'total'>,
      }),
      'config_entry_id': <ANY>,
      'device_class': None,
      'device_id': <ANY>,
      'disabled_by': None,
      'domain': 'sensor',
      'entity_category': None,
      'entity_id': 'sensor.lock_2c3d_pullspring_duration',
      'has_entity_name': True,
      'hidden_by': None,
      'icon': None,
      'id': <ANY>,
      'name': None,
      'options': dict({
      }),
      'original_device_class': <SensorDeviceClass.DURATION: 'duration'>,
      'original_icon': 'mdi:timer-lock-open',
      'original_name': 'Pullspring duration',
      'platform': 'tedee',
      'previous_unique_id': None,
      'supported_features': 0,
      'translation_key': 'pullspring_duration',
      'unique_id': '98765-pullspring_duration',
      'unit_of_measurement': <UnitOfTime.SECONDS: 's'>,
    }),
  ])
# ---
